--- a/docker/spark1/dockerfile
+++ b/docker/spark1/dockerfile
@@ -1,5 +1,9 @@
 # Copyright (c) Jupyter Development Team.
 # Distributed under the terms of the Modified BSD License.
+
+
+## Modified by Matt Martin on 10/22/2023 to add in delta lake
+
 ARG REGISTRY=quay.io
 ARG OWNER=jupyter
 ARG BASE_CONTAINER=$REGISTRY/$OWNER/scipy-notebook
