--- a/iceberg/ice1_docker/dockerfile
+++ b/iceberg/ice1_docker/dockerfile
@@ -1,44 +1,21 @@
-# # TO DO
 
-## got command working > spark-shell --packages org.apache.iceberg:iceberg-spark-runtime-3.5_2.13:1.4.1
-## now the juypter notebook is still erroring; need to figure out what is missing;
-## says a scala class is missing so need to research that one
-## as of 11/2/23 - cannot figure out why i can run iceberg in the spark shell but not in the python notebook
+## Author: Matt Martin
+## Date: 2023-11-06
+## Desc: Docker Container for Iceberg
 
 ARG REGISTRY=quay.io
 ARG OWNER=jupyter
 ARG BASE_CONTAINER=$REGISTRY/$OWNER/scipy-notebook
 FROM $BASE_CONTAINER
 
-LABEL maintainer="Jupyter Project <jupyter@googlegroups.com>"
+LABEL maintainer="Matt Martin"
 
-# Fix: https://github.com/hadolint/hadolint/wiki/DL4006
-# Fix: https://github.com/koalaman/shellcheck/wiki/SC3014
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 USER root
 
-# Spark dependencies
-# Default values can be overridden at build time
-# (ARGS are in lower case to distinguish them from ENV)
-#ARG spark_version="3.4.1"
-ARG spark_version="3.5.0"
-ARG hadoop_version="3"
-ARG scala_version
-
-#no scala specified
-#3.4.1
-#ARG spark_checksum="5a21295b4c3d1d3f8fc85375c711c7c23e3eeb3ec9ea91778f149d8d321e3905e2f44cf19c69a28df693cffd536f7316706c78932e7e148d224424150f18b2c5"
-
-#3.5.0
-ARG spark_checksum="8883c67e0a138069e597f3e7d4edbbd5c3a565d50b28644aad02856a1ec1da7cb92b8f80454ca427118f69459ea326eaa073cf7b1a860c3b796f4b07c2101319"
-
+## get java
 ARG openjdk_version="17"
-#ARG openjdk_version="11"
-
-
-ENV APACHE_SPARK_VERSION="${spark_version}" \
-    HADOOP_VERSION="${hadoop_version}"
 
 RUN apt-get update --yes && \
     apt-get install --yes --no-install-recommends \
@@ -49,28 +26,6 @@ RUN apt-get update --yes && \
 # Spark installation
 WORKDIR /tmp
 
-RUN curl --progress-bar --location --output "spark.tgz" \
-        "https://dlcdn.apache.org/spark/spark-${APACHE_SPARK_VERSION}/spark-${APACHE_SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz" \
-    && echo "${spark_checksum} *spark.tgz" | sha512sum -c - \
-    && tar xzf "spark.tgz" -C /usr/local --owner root --group root --no-same-owner \
-    && rm "spark.tgz"
-
-# Configure Spark
-ENV SPARK_HOME=/usr/local/spark
-
-ENV SPARK_OPTS="--driver-java-options=-Xms1024M --driver-java-options=-Xmx4096M --driver-java-options=-Dlog4j.logLevel=info" \
-    PATH="${PATH}:${SPARK_HOME}/bin"
-
-RUN ln -s "spark-${APACHE_SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}" "${SPARK_HOME}"; \
-  ln -s "${SPARK_HOME}/sbin/spark-config.sh" /usr/local/bin/before-notebook.d/spark-config.sh
-
-## add iceberg jar
-ARG ICE_JAR=iceberg-spark-runtime-3.5_2.13-1.4.1.jar
-
-RUN curl -Lo ${SPARK_HOME}/jars/${ICE_JAR} \
-    "https://search.maven.org/remotecontent?filepath=org/apache/iceberg/iceberg-spark-runtime-3.5_2.13/1.4.1/${ICE_JAR}" \
-  && chmod u+x ${SPARK_HOME}/jars/${ICE_JAR}
-
 
 # Configure IPython system-wide
 COPY ipython_kernel_config.py "/etc/ipython/"
@@ -80,28 +35,25 @@ USER ${NB_UID}
 
 RUN pip install \
     pyspark==3.5 \
-    pyiceberg[pyarrow,duckdb,pandas]==0.5.0
+    pyiceberg==0.5.0
+
+## get the pyspark iceberg runtime and sql extensions jars
+
+ARG ICE_RT=iceberg-spark-runtime-3.5_2.12-1.4.2.jar
+RUN curl -Lo "/opt/conda/lib/python3.11/site-packages/pyspark/jars/${ICE_RT}" \
+    "https://search.maven.org/remotecontent?filepath=org/apache/iceberg/iceberg-spark-runtime-3.5_2.12/1.4.2/${ICE_RT}" \
+  && chmod u+x "/opt/conda/lib/python3.11/site-packages/pyspark/jars/${ICE_RT}"
+
+ARG ICE_SQL_EXT=iceberg-spark-extensions-3.5_2.12-1.4.2.jar
+RUN curl -Lo "/opt/conda/lib/python3.11/site-packages/pyspark/jars/${ICE_SQL_EXT}" \
+    "https://search.maven.org/remotecontent?filepath=org/apache/iceberg/iceberg-spark-extensions-3.5_2.12/1.4.2/${ICE_SQL_EXT}" \
+  && chmod u+x "/opt/conda/lib/python3.11/site-packages/pyspark/jars/${ICE_SQL_EXT}"
+
 
 RUN mamba clean --all -f -y && \
     fix-permissions "${CONDA_DIR}" && \
     fix-permissions "/home/${NB_USER}"
 
-
-RUN curl -Lo "/opt/conda/lib/python3.11/site-packages/pyspark/jars/${ICE_JAR}" \
-    "https://search.maven.org/remotecontent?filepath=org/apache/iceberg/iceberg-spark-runtime-3.5_2.13/1.4.1/${ICE_JAR}" \
-  && chmod u+x "/opt/conda/lib/python3.11/site-packages/pyspark/jars/${ICE_JAR}"
-
-## add pyiceberg jar to pyspark jars folder
-#COPY ${SPARK_HOME}/jars/${ICE_JAR} "/opt/conda/lib/python3.11/site-packages/pyspark/jars/"
-
-# RUN mamba install --yes \
-#     'pandas=2.0.3' \
-#     'pyspark=3.5' \
-#     'pyiceberg=0.5.0' \
-#     'pyarrow' && \
-#     mamba clean --all -f -y && \
-#     fix-permissions "${CONDA_DIR}" && \
-#     fix-permissions "/home/${NB_USER}"
 
 #add example delta python file
 COPY iceberg_template.ipynb "${HOME}"
