--- a/deltalake/delta2/Dockerfile
+++ b/deltalake/delta2/Dockerfile
@@ -21,13 +21,23 @@ COPY ./install_scripts /install_scripts
 RUN chmod +x /install_scripts/*
 
 ## Install Open JDK 17
-RUN /install_scripts/install_open_jdk_17.sh
+#RUN /install_scripts/install_open_jdk_17.sh
+RUN apt-get update --yes \
+    && apt-get install --yes --no-install-recommends "openjdk-17-jre-headless" \
+    ca-certificates-java \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 
 ## install Spark
 ENV APACHE_SPARK_VERSION=3.5.0
 ENV HADOOP_VERSION=3
 
-RUN /install_scripts/install_spark.sh
+#RUN /install_scripts/install_spark.sh
+RUN curl --progress-bar --location --output "spark.tgz" \
+    "https://dlcdn.apache.org/spark/spark-${APACHE_SPARK_VERSION}/spark-${APACHE_SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz" \
+    && tar xzf "spark.tgz" -C /usr/local --owner root --group root --no-same-owner \
+    && rm "spark.tgz"
 
 # Configure Spark
 ENV SPARK_HOME=/usr/local/spark
@@ -37,10 +47,16 @@ RUN ln -s "spark-${APACHE_SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}" "${SPARK_H
 RUN ln -s "${SPARK_HOME}/sbin/spark-config.sh" /usr/local/bin/before-notebook.d/spark-config.sh
 
 # # add Delta Spark Runtime
-RUN /install_scripts/install_delta_rt.sh
+#RUN /install_scripts/install_delta_rt.sh
+## note: after trying several times over, delta spark just calls ivy to install the runtimes
+ARG DELTA_SPARK_RT="delta-spark_2.12-3.0.0.jar"
+ARG DELTA_SPARK_URL="https://repo1.maven.org/maven2/io/delta/delta-spark_2.12/3.0.0/${DELTA_SPARK_RT}"
+RUN curl -o "${SPARK_HOME}/jars/${DELTA_SPARK_RT}" ${DELTA_SPARK_URL} \
+    && chmod +x "${SPARK_HOME}/jars/${DELTA_SPARK_RT}"
 
 #add the spark defaults config file
 COPY spark-defaults.conf /usr/local/spark/conf
+
 
 WORKDIR /tmp
 
@@ -59,6 +75,7 @@ RUN fix-permissions "${CONDA_DIR}" && \
 
 #add example delta python file
 COPY delta_lake_template.ipynb "${HOME}"
+
 
 WORKDIR "${HOME}"
 EXPOSE 4040
