--- a/duckdb/dk1/Dockerfile
+++ b/duckdb/dk1/Dockerfile
@@ -1,9 +1,12 @@
 
 #slim is 286mb, bullseye is 1GB
-#slim did not have the ability to install ipykernel
-#FROM python:3.11-slim 
-#might want to try bullsye-slim to see if it works and saves on space
-FROM python:3.11-bullseye 
+#slim and slim-bullseye can't handle installing the pykernel for notebook stuff
+
+#use slim for just py files
+FROM python:3.11-slim 
+
+#use bullseye for notebook files
+#FROM python:3.11-bullseye
 WORKDIR /usr/src/app
 RUN pip install --upgrade pip
 COPY requirements.txt .
@@ -11,4 +14,4 @@ RUN pip install -r requirements.txt
 
 #might want to add this directory as a mount point
 RUN mkdir /root/scripts
-COPY /scripts/duckdb_test.ipynb /root/scripts
+COPY /scripts/test.py /root/scripts
