--- a/rust_code/polars_r/Cargo.toml
+++ b/rust_code/polars_r/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-polars = { version = "0.38.3", features = ["parquet", "dtype-i8","lazy"] }
-polars-io = "0.38.3"
+polars-lazy = "0.38.3"
+polars = { version = "0.38.3", features = ["lazy", "strings", "regex", "to_dummies","parquet"] }
+#polars-io = "0.38.3"
