--- a/polars/volume_testing/polars_r/Cargo.toml
+++ b/polars/volume_testing/polars_r/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono-tz = "0.5"
 chrono = "0.4"
 polars-lazy = "0.38.3"
 polars = { version = "0.38.3", features = ["lazy", "strings", "regex", "to_dummies","parquet"] }
