--- a/substack/articles/2024.12.21-Polars_Rust/polar_rust1/Cargo.toml
+++ b/substack/articles/2024.12.21-Polars_Rust/polar_rust1/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 polars-lazy = "0.45.1"
-google-cloud-storage = "0.18"
+google-cloud-storage = "0.23.0"
+tokio = { version = "1.42.0", features = ["full"] }
 
 polars = { version = "0.45.1", features = ["lazy", "strings", "regex", "to_dummies","parquet"] }
