--- a/duckdb/big_data_test/pyproject.toml
+++ b/duckdb/big_data_test/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "duckdb>=1.4.1",
+    "polars>=1.34.0",
     "pyspark==3.5.4",
 ]
