--- a/substack/articles/2026.01.03 - c2_semantic/model/cubes/c2_cube.yml
+++ b/substack/articles/2026.01.03 - c2_semantic/model/cubes/c2_cube.yml
@@ -17,32 +17,62 @@ cubes:
     sql: "Type"
     type: string
 
+  - name: distance_block
+    type: string
+    case:
+      when:
+        - sql: "\"Work Distance\" < 1000"
+          label: "< 1 km"
+        - sql: "\"Work Distance\" between 1000 AND 5000"
+          label: "1 km - 5 km"
+        - sql: "\"Work Distance\" between 5001 AND 6000"
+          label: "5 km - 6 km"
+        - sql: "\"Work Distance\" between 6001 AND 7000"
+          label: "6 km - 7 km"
+        - sql: "\"Work Distance\" >= 7000"
+          label: ">= 7 km"
+
   measures:
-  - name: count
+  - name: workout_cnt
     type: count
 
-  - name: total_distance_meters
+  - name: total_distance_m
     title: "Total Distance (Meters)"
     sql: "\"Work Distance\""
     type: sum
 
-  - name: total_time_sec
-    title: "Total Time (Sec)"
-    sql: "\"Work Time (Seconds)\""
+  - name: total_distance_km
+    title: "Total Distance (Kilometers)"
+    sql: "ROUND(sum(\"Work Distance\") / 1000.0, 2)"
+    type: number
+
+  - name: total_strokes
+    title: "Total Strokes"
+    sql: "\"Stroke Count\""
     type: sum
 
+  - name: total_calolries
+    title: "Total Calories Burned"
+    sql: "\"Total Cal\""
+    type: sum
+
+  - name: watts_avg
+    title: "Average Watts"
+    sql: "ROUND(AVG(\"Avg Watts\"),2)"
+    type: number
+
+  - name: session_duration_min
+    title: "Average Session Duration (Minutes)"
+    sql: "ROUND(AVG(\"Work Time (Seconds)\"/60.0),2)"
+    type: number
+
   - name: spm
-    title: "Strokes Per Minute"
+    title: "Average Strokes Per Minute"
     sql: "sum(\"Stroke Count\") / sum(\"Work Time (Seconds)\") * 60.0"
     type: number
 
-  - name: split_time_per_500m
-    title: "Split Time per 500m (Sec)"
-    sql: "CASE WHEN SUM(\"Work Distance\") = 0 THEN NULL ELSE (SUM(\"Work Time (Seconds)\") * 500.0) / SUM(\"Work Distance\") END"
-    type: number
-
-  - name: split_time_per_500m_mm_ss
-    title: "Split Time per 500m (mm:ss.ff)"
+  - name: pace
+    title: "Average Split Time per 500m (mm:ss.ff)"
     type: string
     sql: |
       CASE
@@ -58,24 +88,9 @@ cubes:
         )
       END
 
-  - name: avg_drag_factor
+  - name: drag_factor
     title: "Average Drag Factor"
-    sql: "AVG(\"Drag Factor\")"
+    sql: "ROUND(AVG(\"Drag Factor\"),2)"
     type: number
 
-  # - name: pace_sec
-  #   title: "Split per 500m (Sec)"
-  #   sql: 'CASE WHEN SUM("Work Distance") = 0 THEN NULL ELSE ROUND((SUM("Work Time (Seconds)") * 500.0) / SUM("Work Distance")) END'
-  #   type: number
-
-  # - name: pace_mm_ss
-  #   title: "Split per 500m (mm:ss)"
-  #   #// Formats the rounded seconds as mm:ss
-  #   sql: 'CASE WHEN SUM("Work Distance") = 0 THEN NULL ELSE printf(''%d:%02d'', CAST(CAST(ROUND((SUM("Work Time (Seconds)") * 500.0) / SUM("Work Distance")) AS INTEGER) / 60 AS INTEGER), CAST(CAST(ROUND((SUM("Work Time (Seconds)") * 500.0) / SUM("Work Distance")) AS INTEGER) % 60 AS INTEGER)) END'
-  #   type: number
-
-  # - name: pace
-  #   title: "Pace (Sec/Meter)"
-  #   sql: "CASE WHEN SUM(\"Work Distance\") = 0 THEN NULL ELSE SUM(\"Work Time (Seconds)\") / SUM(\"Work Distance\") END"
-  #   type: number
   
