--- a/substack/articles/2026.01.03 - c2_semantic/pyproject.toml
+++ b/substack/articles/2026.01.03 - c2_semantic/pyproject.toml
@@ -6,5 +6,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "bs4>=0.0.2",
+    "duckdb>=1.4.3",
     "requests>=2.32.5",
+    "fastapi>=0.115.0",
+    "uvicorn[standard]>=0.30.0",
+    "numpy>=2.4.1",
+    "pandas>=2.3.3",
 ]
